Bug 269445 - Not possible to select only one album INCLUDING subfolders to scan for faces
Summary: Not possible to select only one album INCLUDING subfolders to scan for faces
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Faces-Workflow (other bugs)
Version First Reported In: 2.0.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-26 10:22 UTC by Rinus Bakker
Modified: 2017-08-15 21:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rinus Bakker 2011-03-26 10:22:59 UTC
Version:           2.0.0 (using KDE 4.6.1) 
OS:                Linux

If you select "all albums" your whole database is scanned for faces,
but if you want not ALL of your albums scanned you have to check not 
only one or more albums but all of the sub and subsub etc albums as 
well, else it does not scan.


Reproducible: Always
Comment 1 Marcel Wiesweg 2011-03-26 14:55:05 UTC
Two solutions:
1) Selecting an album is recursive by default
2) We provide options in the context menu to select all children (as already available in the tag filter view on the right)

Any opinions?
Comment 2 Rinus Bakker 2011-03-26 15:27:38 UTC
I will have to figure this out, will come back on the subject soon as 
possible. Thanks for your attention.
Rinus
Op 26-3-2011 14:55, Marcel Wiesweg schreef:
> https://bugs.kde.org/show_bug.cgi?id=269445
>
>
>
>
>
> --- Comment #1 from Marcel Wiesweg<marcel wiesweg gmx de>   2011-03-26 14:55:05 ---
> Two solutions:
> 1) Selecting an album is recursive by default
> 2) We provide options in the context menu to select all children (as already
> available in the tag filter view on the right)
>
> Any opinions?
>
Comment 3 caulier.gilles 2011-03-26 16:04:58 UTC
Marcel, 

I vote for 2/, to be homogenous with tags selection behaviors.

Gilles Caulier
Comment 4 Rinus Bakker 2011-03-26 17:51:39 UTC
I have been thinking about the subject and I think option one cause less 
confusion, but option 2 gives quicker control. I go for option 2.
Op 26-3-2011 15:30, sleepless schreef:
> I will have to figure this out, will come back on the subject soon as 
> possible. Thanks for your attention.
> Rinus
> Op 26-3-2011 14:55, Marcel Wiesweg schreef:
>> https://bugs.kde.org/show_bug.cgi?id=269445
>>
>>
>>
>>
>>
>> --- Comment #1 from Marcel Wiesweg<marcel wiesweg gmx de>   
>> 2011-03-26 14:55:05 ---
>> Two solutions:
>> 1) Selecting an album is recursive by default
>> 2) We provide options in the context menu to select all children (as 
>> already
>> available in the tag filter view on the right)
>>
>> Any opinions?
>>
>
Comment 5 Marcel Wiesweg 2011-07-11 17:03:06 UTC
Git commit 9b8877ad656437ee2e1520020c3ab62ba6130c07 by Marcel Wiesweg.
Committed on 06/07/2011 at 22:23.
Pushed by mwiesweg into branch 'master'.

Add a context menu with check/uncheck actions to the embedded tree views
in the face scan dialog.
Code is fully shared with other occurrences of this submenu.

BUG: 269445

M  +26   -0    digikam/album/albumselectcombobox.cpp     
M  +7    -0    digikam/album/albumselectcombobox.h     
M  +2    -0    utilities/facedetection/facescandialog.cpp     

http://commits.kde.org/digikam/9b8877ad656437ee2e1520020c3ab62ba6130c07