Add a context menu with check/uncheck actions to the embedded tree views in the face scan dialog. Code is fully shared with other occurrences of this submenu.

BUG: 269445