digikam/album/albumselectcombobox.cpp
@@ -38,6 +38,7 @@
 #include "albummodel.h"
 #include "albumfiltermodel.h"
 #include "albumtreeview.h"
+#include "contextmenuhelper.h"
 
 namespace Digikam
 {
@@ -312,6 +313,31 @@ void AbstractAlbumTreeViewSelectComboBox::setTreeView(AbstractAlbumTreeView* tre
     if (!m_treeView)
     {
         m_treeView = treeView;
+    }
+}
+
+class CheckUncheckContextMenuElement : public QObject, public AbstractAlbumTreeView::ContextMenuElement
+{
+public:
+    CheckUncheckContextMenuElement(QObject* parent) : QObject(parent) {}
+
+    void addActions(AbstractAlbumTreeView* view, ContextMenuHelper& cmh, Album* album)
+    {
+        AbstractCheckableAlbumModel *checkable = qobject_cast<AbstractCheckableAlbumModel*>(view->albumModel());
+        if (checkable)
+        {
+            cmh.setAlbumModel(checkable);
+            cmh.addAlbumCheckUncheckActions(album);
+        }
+    }
+};
+
+void AbstractAlbumTreeViewSelectComboBox::addCheckUncheckContextMenuActions()
+{
+    if (m_treeView)
+    {
+        m_treeView->setEnableContextMenu(true);
+        m_treeView->addContextMenuElement(new CheckUncheckContextMenuElement(this));
     }
 }
 
